# IR-Image-Colouring

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
src/ircolor/data/: dataset.py  prepare.py
src/ircolor/eval/: evaluate.py
src/ircolor/inference/: predict.py
src/ircolor/losses/: objectives.py
src/ircolor/models/: pipeline.py
src/ircolor/training/: train.py
tests/: test_losses.py
