[project]
name = "ircolor"
version = "0.1.0"
description = "IR image colorization and super-resolution for Landsat 8/9 (ISRO PS-10)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
packages = ["ircolor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["gpu: requires a CUDA device", "slow: long-running"]
